# integration_job_seracher

./: .gitignore  .gitmodules  Dockerfile  PIPELINE.md  README.md  agent.py  agent_eval.py  helper.py  jobs.csv  main.py  prefect.yaml  pyproject.toml  requirements.txt  setup_secrets.py  template.json  test.py  weather1-flow.py
migrations/: 001_multi_profile_pipeline.sql
qwen_test/: MODEL_COMPARISON.md  batch_compare.py  batch_results.json  compare_models.py
scripts/: claude_control.json  dashboard.py  dashboard_web.py  double_prompt_test.py  eval_new_extract.py  eval_phase3b.py  eval_phase3c.py  eval_phase3d.py  eval_phase3e.py  eval_prompt_compare.py  eval_prompt_compare2.py  eval_prompt_compare3.py  eval_prompt_compare4.py  eval_prompt_compare5.py  eval_prompt_compare6.py  extract_eval_compare.py  generate_resume_json.py  manual_8b_test.py  new_control_slava.json  prompt_variants_test.py  push_sample_jobs.py  test_batch.py  update_queue_resume.py
scripts/eval/: README.md  agent_eval.py  ground_truth_kezia.json
